--- a/style/login.css
+++ b/style/login.css
@@ -1,4 +1,4 @@
-body {
+ body {
     --color-primary: #009579;
     --color-primary-dark: #007f67;
     --color-secondary: #252c6a;
@@ -6,17 +6,18 @@ body {
     --color-success: #4bb544;
     --border-radius: 4px;
 
-    margin: 0;
+    /* margin: 0;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
     background: url(./background.jpg);
-    background-size: cover;
+    background-size: cover; */
 }
 
-.container {
+.login {
+    display: block;
     width: 400px;
     max-width: 400px;
     margin: 1rem;
@@ -24,9 +25,17 @@ body {
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius);
     background: #ffffff;
-}
 
-.container,
+    /* height: 100vh; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    /* background: url(./background.jpg); */
+    background-size: cover
+} 
+
+.login,
 .form__input,
 .form__button {
     font: 500 1rem 'Quicksand', sans-serif;
