--- a/style/app.css
+++ b/style/app.css
@@ -1,6 +1,9 @@
+@import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+
 @import url("main.css");
 @import url("container.css");
 @import url("login.css");
 @import url("footer.css");
-
+@import url("sidebar.css");
 
