--- a/style/container.css
+++ b/style/container.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
     width: 100%;
-    border: 1px solid red;
+    height: 80vh;  
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    
 }
