--- a/style/login.css
+++ b/style/login.css
@@ -1,23 +1,6 @@
- body {
-    --color-primary: #009579;
-    --color-primary-dark: #007f67;
-    --color-secondary: #252c6a;
-    --color-error: #cc3333;
-    --color-success: #4bb544;
-    --border-radius: 4px;
-
-    /* margin: 0;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    background: url(./background.jpg);
-    background-size: cover; */
-}
 
 .login {
-    display: block;
+    display: flex;
     width: 400px;
     max-width: 400px;
     margin: 1rem;
@@ -25,13 +8,11 @@
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius);
     background: #ffffff;
-
-    /* height: 100vh; */
+    max-height: 450px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    /* background: url(./background.jpg); */
     background-size: cover
 } 
 
