--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 body {
+  /* 00a8f4 */
   --color-primary: #0d6efd;
   --color-primary-dark: #0d6efd;
   --color-secondary: #5f5f5f;
@@ -7,6 +8,21 @@ body {
   --border-radius: 4px;
   --btn-color: #0d6efd;
   --menu-selection: #0d6efd;
+}
+
+.navbar {
+ padding: 3px 10px 3px 10px;
+ margin: 0;
+}
+
+.container-fluid{
+
+}
+
+.logo {
+  height: 29px;
+  width: 30px;
+  background-image: url('../images/logo30.png');
 }
 
 .btn-main {
