--- a/style/app.css
+++ b/style/app.css
@@ -2,9 +2,9 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
 
 @import url("main.css");
-@import url("container.css");
-@import url("login.css");
-@import url("footer.css");
 @import url("sidebar.css");
 @import url("page.css");
+@import url("login.css");
+@import url("footer.css");
 
+/* @import url("container.css"); */
