--- a/style/page.css
+++ b/style/page.css
@@ -1,16 +1,38 @@
-.container{
-    /* border: 1px solid rgb(216, 16, 16); */
-    min-height: 100vh;
-}
+
 
 .page-content{
-    display: table-column;
+    /* display: flex    ; */
+    width: 93%;
+    min-height: 60vh;  
+    /* justify-content: center; */
+    align-items: center;
+    text-align: center;
+    margin-top:45px;
+    margin-left:7%;
+
+    /* display: table-column;
     width: 100%;
-    /* border: 1px solid rgb(248, 248, 248); */
-    padding-top: 10px;
+    padding-top: 10px; 
+    height: 80vh;  
+    justify-content: center;
+    align-items: center; */
+    /* display: table-column;
+    position: relative;
+    top:0px;
+    width: 100%;
+    height: 500px;   
+    justify-content: center;
+    align-items: center;*/
+    border: 1px solid green; 
+}
+
+.container{
+    /* border: 1px solid rgb(216, 16, 16); */
+    /* min-height: 100vh; */
 }
 
 .page-title{
     width: 100%;
     text-align: center;
+    border: 1px solid blue; 
 }
