--- a/style/container.css
+++ b/style/container.css
@@ -1,7 +1,7 @@
-.container {
+/* .container {
     display: flex;
     width: 100%;
     height: 80vh;  
     justify-content: center;
     align-items: center;
-}
+} */
